--- a/CoreDemo/Views/Writer/WriterEditProfile.cshtml
+++ b/CoreDemo/Views/Writer/WriterEditProfile.cshtml
@@ -24,7 +24,7 @@
                 @Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword4">Şifre</label>
+                <label for="exampleInputPassword4" type="Password">Şifre</label>
                 @Html.PasswordFor(x => x.WriterPassword, new { @class = "form-control" })
             </div>
             <div class="form-group">
