--- a/CoreDemo/Views/Shared/AdminLayout.cshtml
+++ b/CoreDemo/Views/Shared/AdminLayout.cshtml
@@ -162,7 +162,7 @@
                         </li>
                     </ol>
                 </div>
-                <div class="col-lg-2"> 
+                <div class="col-lg-2">
 
                 </div>
             </div>
@@ -203,13 +203,14 @@
     <!-- Peity -->
     <script src="~/inspinia-gh-pages/js/demo/peity-demo.js"></script>
 
-    <script>$(document).ready(function(){
+    <script>
+    $(document).ready(function () {
             $('.i-checks').iCheck({
                 checkboxClass: 'icheckbox_square-green',
                 radioClass: 'iradio_square-green',
             });
         });</script>
-
+    @await RenderSectionAsync("scripts",false);
 </body>
 
 </html>
