--- a/CoreDemo/Views/Writer/WriterEditProfile.cshtml
+++ b/CoreDemo/Views/Writer/WriterEditProfile.cshtml
@@ -1,50 +1,47 @@
-﻿@model EntityLayer.Concrete.Writer
+﻿@model UserUpdateViewModel
 @{
     ViewData["Title"] = "WriterEditProfile";
     Layout = "~/Views/Shared/WriterLayout.cshtml";
 }
 
-@using (Html.BeginForm("WriterEditProfile", "Writer", FormMethod.Post)) 
-{
+
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">Yazar Profil Bilgileri Düzenleme</h4>
             <br />
 
-
-            @Html.HiddenFor(x => x.WriterID, new {@class="form-control"})
-        <form class="forms-sample">
-            <div class="form-group">
-                <label for="exampleInputName1">Yazar Ad Soyad</label>
-                @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail3">Mail Adresi</label>
-                @Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword4" type="Password">Şifre</label>
-                @Html.PasswordFor(x => x.WriterPassword, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                <label>Yazar Görsel</label>
-                <input type="file" name="img[]" class="file-upload-default">
-                <div class="input-group col-xs-12">
-                    <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
-                    <span class="input-group-append">
-                        <button class="file-upload-browse btn btn-gradient-primary" type="button">Resim Seç</button>
-                    </span>
+            <form class="forms-sample" method="post">
+                <div class="form-group">
+                    <label for="exampleInputName1">Yazar Adı Soyadı</label>
+                    <input type="text" asp-for="@Model.namesurname" class="form-control" />
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="exampleTextarea1">Yazar Hakkında</label>
-                @Html.TextAreaFor(x => x.WriterAbout, 10, 3, new { @class = "form-control" })
-            </div>
-            <button type="submit" class="btn btn-gradient-primary mr-2">Güncelle</button>
-            <button class="btn btn-light">İptal</button>
-        </form>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Kullanıcı Adı</label>
+                    <input type="text" asp-for="@Model.username" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Mail Adresi</label>
+                    <input type="text" asp-for="@Model.mail" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Yeni Şifre</label>
+                    <input type="text" asp-for="@Model.password" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Resim Yolu</label>
+                    <input type="text" asp-for="@Model.imageurl" class="form-control" />
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" id="flexCheckChecked" asp-for="@Model.ChangePassword">
+                    <label for="flexCheckChecked">
+                        Şifremi Değiştirmek istiyorum
+                    </label>
+                    </div>
+                    <button type="submit" class="btn btn-gradient-primary mr-2">Güncelle</button>
+                    <button class="btn btn-light" asp-action="Index" asp-controller="Dashboard">İptal</button>
+            </form>
         </div>
     </div>
 </div>
-}
+
